# cuda-memory-optimizations

./: CMakeLists.txt  main.cu
data_transfers/: batching.cu  batching.cuh  pinning.cu  pinning.cuh  staged_copy_execute.cu  staged_copy_execute.cuh
device_memory_utilization/: matrix_multiplication.cu  matrix_multiplication.cuh
include/: util.h
